# nft-marketplace

./: .env.example  .gitignore  Anchor.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/cart/: page.tsx
apps/web/src/app/create/: page.tsx
apps/web/src/app/market/: page.tsx
apps/web/src/app/packs/: page.tsx
apps/web/src/app/trade/: page.tsx
apps/web/src/components/: Footer.tsx  Nav.tsx  SolanaProvider.tsx
apps/web/src/components/me/: PageShell.tsx
docs/: PARITY.md
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs
scripts/: patch-cargo-edition-2024.sh
services/api/: package.json
services/api/src/: db.ts  index.ts
services/indexer/: package.json
services/indexer/src/: index.ts
