[package]
name = "marketplace"
version = "0.1.0"
description = "NFT marketplace: listings, SKR/SOL, offers, batch buy, packs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
